# movie-recommendation

./: .gitignore  CONTRIBUTING.md  Dockerfile  main.py  pyproject.toml  readme.md
src/: utils.py
src/api/: app.py
src/core/: movie_reco_db.py  movie_reco_models.py  requesters.py
src/letterboxd/csv_importer/: importer.py
src/letterboxd/movie_importer/: movie_importer.py
