[project]
name = "movie-recommendation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "raccoontools==1.2.1",
    "dotenv==0.9.9",
    "requests==2.32.5",
    "psycopg2==2.9.11",
    "uvicorn==0.38.0",
    "gunicorn==23.0.0",
    "fastapi==0.121.2",
    "simple-log-factory-ext-otel[requests,psycopg2,fastapi]==1.5.0rc1",
]
